// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`buildingcards-utils getBuildingCards matches snapshot 1`] = `
Array [
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-almacen-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 721,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-almacen-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 840,
    "y": 242.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-altar.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-banos.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-botica.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 293.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-campo-almacen-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 602,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-campo-maderero.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 721,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-cantera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 840,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-cristaleria.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 959,
    "y": 344.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-establos.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 542.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-explotacion-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-farmacia.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-guarnicion.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-i-palenque.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 1018.5,
    "y": 395.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-prensa.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 483,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-arcilla.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 602,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-madera.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 721,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-reserva-de-piedra.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 840,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-scriptorium.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 959,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-i-taberna.jpg",
    "imageFileBackface": "building-i-back.jpg",
    "type": "building",
    "x": 1078,
    "y": 446.5,
  },
]
`;

exports[`buildingcards-utils getBuildingCards matches snapshot 2`] = `
Array [
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-acueducto.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 483,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-aduana.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 602,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-aserradero.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-barracones.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-biblioteca.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 959,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-campo-de-tiro.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 1078,
    "y": 242.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-caravasar.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 542.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-cerveceria.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-criadero-de-caballos.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-enfermeria.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-escuela.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 1018.5,
    "y": 293.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-estatua.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 602,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-fabrica-de-ladrillos.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-foro.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-jusgado.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 959,
    "y": 344.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-laboratorio.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-mina-descubierta.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-ii-murallas.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 395.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-plaza-de-armas.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-ii-secadero.jpg",
    "imageFileBackface": "building-ii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 446.5,
  },
]
`;

exports[`buildingcards-utils getBuildingCards matches snapshot 3`] = `
Array [
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-academia.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 242.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-ameria.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 242.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-arena.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-arsenal.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 293.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-ayuntamento.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 293.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-camara-de-comercio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 602,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-circo.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-deposito-de-armas.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 344.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-estudio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 959,
    "y": 344.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-faro.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 395.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-fortificaciones.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 395.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-jardines.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 602,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-obelisco.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 721,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-observatorio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 840,
    "y": 446.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-iii-palacio-de-justicia.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 959,
    "y": 446.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-palacio.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 661.5,
    "y": 497.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-iii-panteon.jpg",
    "imageFileBackface": "building-iii-back.jpg",
    "type": "building",
    "x": 780.5,
    "y": 497.5,
  },
  Object {
    "faceDown": true,
    "id": "",
    "imageFile": "building-g-gremio-de-armadores.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 899.5,
    "y": 497.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-g-gremio-de-cientificos.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 721,
    "y": 548.5,
  },
  Object {
    "faceDown": false,
    "id": "",
    "imageFile": "building-g-gremio-de-construciones.jpg",
    "imageFileBackface": "building-g-back.jpg",
    "type": "building",
    "x": 840,
    "y": 548.5,
  },
]
`;

exports[`buildingcards-utils getBuildingCardsPlacement places first age cards 1`] = `
Array [
  Object {
    "x": 721,
    "y": 0,
  },
  Object {
    "x": 840,
    "y": 0,
  },
  Object {
    "x": 661.5,
    "y": 51,
  },
  Object {
    "x": 780.5,
    "y": 51,
  },
  Object {
    "x": 899.5,
    "y": 51,
  },
  Object {
    "x": 602,
    "y": 102,
  },
  Object {
    "x": 721,
    "y": 102,
  },
  Object {
    "x": 840,
    "y": 102,
  },
  Object {
    "x": 959,
    "y": 102,
  },
  Object {
    "x": 542.5,
    "y": 153,
  },
  Object {
    "x": 661.5,
    "y": 153,
  },
  Object {
    "x": 780.5,
    "y": 153,
  },
  Object {
    "x": 899.5,
    "y": 153,
  },
  Object {
    "x": 1018.5,
    "y": 153,
  },
  Object {
    "x": 483,
    "y": 204,
  },
  Object {
    "x": 602,
    "y": 204,
  },
  Object {
    "x": 721,
    "y": 204,
  },
  Object {
    "x": 840,
    "y": 204,
  },
  Object {
    "x": 959,
    "y": 204,
  },
  Object {
    "x": 1078,
    "y": 204,
  },
]
`;

exports[`buildingcards-utils getBuildingCardsPlacement places second age cards 1`] = `
Array [
  Object {
    "x": 483,
    "y": 0,
  },
  Object {
    "x": 602,
    "y": 0,
  },
  Object {
    "x": 721,
    "y": 0,
  },
  Object {
    "x": 840,
    "y": 0,
  },
  Object {
    "x": 959,
    "y": 0,
  },
  Object {
    "x": 1078,
    "y": 0,
  },
  Object {
    "x": 542.5,
    "y": 51,
  },
  Object {
    "x": 661.5,
    "y": 51,
  },
  Object {
    "x": 780.5,
    "y": 51,
  },
  Object {
    "x": 899.5,
    "y": 51,
  },
  Object {
    "x": 1018.5,
    "y": 51,
  },
  Object {
    "x": 602,
    "y": 102,
  },
  Object {
    "x": 721,
    "y": 102,
  },
  Object {
    "x": 840,
    "y": 102,
  },
  Object {
    "x": 959,
    "y": 102,
  },
  Object {
    "x": 661.5,
    "y": 153,
  },
  Object {
    "x": 780.5,
    "y": 153,
  },
  Object {
    "x": 899.5,
    "y": 153,
  },
  Object {
    "x": 721,
    "y": 204,
  },
  Object {
    "x": 840,
    "y": 204,
  },
]
`;

exports[`buildingcards-utils getBuildingCardsPlacement places third age cards 1`] = `
Array [
  Object {
    "x": 721,
    "y": 0,
  },
  Object {
    "x": 840,
    "y": 0,
  },
  Object {
    "x": 661.5,
    "y": 51,
  },
  Object {
    "x": 780.5,
    "y": 51,
  },
  Object {
    "x": 899.5,
    "y": 51,
  },
  Object {
    "x": 602,
    "y": 102,
  },
  Object {
    "x": 721,
    "y": 102,
  },
  Object {
    "x": 840,
    "y": 102,
  },
  Object {
    "x": 959,
    "y": 102,
  },
  Object {
    "x": 721,
    "y": 153,
  },
  Object {
    "x": 840,
    "y": 153,
  },
  Object {
    "x": 602,
    "y": 204,
  },
  Object {
    "x": 721,
    "y": 204,
  },
  Object {
    "x": 840,
    "y": 204,
  },
  Object {
    "x": 959,
    "y": 204,
  },
  Object {
    "x": 661.5,
    "y": 255,
  },
  Object {
    "x": 780.5,
    "y": 255,
  },
  Object {
    "x": 899.5,
    "y": 255,
  },
  Object {
    "x": 721,
    "y": 306,
  },
  Object {
    "x": 840,
    "y": 306,
  },
]
`;
